--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Run Coverage
       run: |
         chmod +x gradlew
-        ./gradlew testCoverage
+        ./gradlew jacocoTestCoverageVerification
     - name: Add coverage to PR
       id: jacoco
       uses: madrapps/jacoco-report@v1.6.1
